# jummp

./: .editorconfig  .gitignore  .hgignore  Announcement.wiki  CMakeLists.txt  Deliverables.wiki  Develop.wiki  Home.wiki  Roadmap.wiki  application.properties  build.xml  license.txt  net.biomodels.jummp.conf
Dev/: ModularFramework.wiki  Requirements.wiki  UseCases.wiki
definitions/: maths.xsd
dev/: Requirements.wiki  UseCases.wiki
documentation/: plugin-dependency.dot
documentation/solr/: schema.xml  solrconfig.xml
grails-app/conf/: BootStrap.groovy  BuildConfig.groovy  Config.groovy  DataSource.groovy  QuartzConfig.groovy  UrlMappings.groovy
grails-app/controllers/: LoginController.groovy  LogoutController.groovy  MaintenanceController.groovy  UsermanagementController.groovy
grails-app/i18n/: messages.properties  messages_da.properties  messages_es.properties  messages_it.properties  messages_ru.properties  messages_th.properties
grails-app/migrations/: 20140303-createModelAudit.groovy  201404091538-aliasdiff.groovy  201404091714-removePubAuthors.groovy  20140410createPubPerson.groovy  20140410pub-person.groovy  20140622_add_model_submission_and_publication_id.groovy  20140623populate_model_submission_and_publication_id.groovy  20140625make_perennial_id_unique.groovy  20140708users_have_teams.groovy  20140801_make_vcsIdentifier_paths_relative.groovy  20140804_make_repoFile_path_relative.groovy  20150409dropMiriamAnnotationTables.groovy  20150522modelFirstPublishedDate.groovy  20150608_elementAnnotations.groovy  20150608_make_wcm_space_alias_uri_nullable.groovy  20150608_resourceReference.groovy  20150610-DropResourceReferenceConstraints.groovy  20150611-widenResourceReferenceName.groovy  20150626_addCollectionNameToResourceReference.groovy  20151012_addMetadataValidationToRevision.groovy  20151105_populate_revision_validation_level.groovy  20151207_nullable_xref_uri.groovy  20160713_certification.groovy  (+14 more)
jummp-plugins/: CMakeLists.txt
jummp-web-application/: application.properties
schemas/: commonTypes.xsd  modelDefinition.xsd  modellingSteps.xsd  pharmml.xsd  trialDesign.xsd  uncertainty.xsd
scripts/: AST.groovy  BatchImport.groovy  Build.groovy  ConcurrentRepositoryTester.groovy  Core.groovy  CoverageReport.groovy  JummpPlugin.groovy  MarkNextChangesetsRan.groovy  TestCore.groovy  WeceemExport.groovy  WeceemSecurity.groovy  _Events.groovy  weceem-security.groovy
weceem/: branding.gsp  footer.gsp  index.gsp  links.gsp  main-sidebar.gsp
(+1215 files in other folders)
